<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="movie"
            type="com.sol.movie.module.search.data.Movie" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{clickListener}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small">

            <ImageView
                android:id="@+id/imagePoster"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/zero_dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_poster"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@id/barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setPosterImage="@{movie.poster??@string/empty_string}"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtTittle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_tiny"
                android:layout_marginEnd="15dp"
                android:gravity="start"
                android:paddingStart="@dimen/zero_dp"
                android:paddingEnd="@dimen/margin_end"
                android:singleLine="false"
                android:text="@{movie.title??@string/empty_string}"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="@dimen/tittle_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/imagePoster"
                app:layout_constraintTop_toTopOf="parent"
                tools:Text="bafbsdhb befkewkjfb jksefjkbjkf kj  webfbwekfbkwef"
                tools:text="@string/large_string" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_tiny"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@{movie.year}"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/imagePoster"
                app:layout_constraintTop_toBottomOf="@id/txtTittle"
                tools:text="@string/movie_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_tiny"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@{movie.type}"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/imagePoster"
                app:layout_constraintTop_toBottomOf="@id/txtYear"
                tools:text="@string/movie_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtImDBId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_tiny"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@{movie.imdbID}"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/imagePoster"
                app:layout_constraintTop_toBottomOf="@id/txtType"
                tools:text="@string/movie_name" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="txtImDBId"
                app:layout_constraintTop_toBottomOf="@id/txtImDBId" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>